--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "^12.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-loading": "^2.0.3"
+    "react-loading": "^2.0.3",
+    "scrollreveal": "^4.0.9"
   },
   "scripts": {
     "dev": "next dev",
